--- a/src/Components/intro.css
+++ b/src/Components/intro.css
@@ -6,22 +6,6 @@
     flex-direction: row;
     justify-content : center;
     height : 100vh;
-
-    background: linear-gradient(-45deg, #ee7752, #896975, #23a6d5, #23d5ab);
-    background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
-
-}
-@keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
 }
 .Picture{
     margin: 3rem;
@@ -37,6 +21,7 @@
 @media (max-width: 1005px){
     .About{
 flex-direction:column;
+height : 75vh;
 }
 .Picture{
     margin: 2rem;
